--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
 					<ul class="nav_list">
 						<li class="list__drop">
 							Услуги
-							<ul style="display: none">
+							<span class="drop_icon">
+								<img src="./img/arrow-down.svg" alt="">
+							</span>
+							<ul class="drop__list">
 								<li><a href="">Финансирование</a></li>
 								<li><a href="">Консультация</a></li>
 								<li><a href="">Обучение</a></li>
