Added second block's head

--- a/index.html
+++ b/index.html
@@ -98,6 +98,15 @@
 				</div>
 				<div class="rounder"></div>
 			</section>
+
+			<section id="forwho">
+				<div class="wrapper">
+					<div class="forwho__head">
+						<h2>Для кого подойдёт</h2>
+						<a href="#">Зарегистрироваться</a>
+					</div>
+				</div>
+			</section>
 		</main>
 	</body>
 </html>
