--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 						<li class="list__drop">
 							Услуги
 							<span class="drop_icon">
-								<img src="./img/arrow-down.svg" alt="">
+								<img src="./img/arrow-down.svg" alt="" />
 							</span>
 							<ul class="drop__list">
 								<li><a href="">Финансирование</a></li>
@@ -49,7 +49,7 @@
 		<main>
 			<section id="present">
 				<div class="wrapper">
-					<img class="present_back" src="./img/back_main.png" alt="">
+					<img class="present_back" src="./img/back_main.png" alt="" />
 					<div class="present__text">
 						<h1>Мы помогаем бизнесу развиваться</h1>
 						<p>
@@ -101,9 +101,49 @@
 
 			<section id="forwho">
 				<div class="wrapper">
-					<div class="forwho__head">
-						<h2>Для кого подойдёт</h2>
-						<a href="#">Зарегистрироваться</a>
+					<div class="forwho__vertical">
+						<div class="forwho__head">
+							<h2>Для кого подойдёт</h2>
+							<a href="#">Зарегистрироваться</a>
+						</div>
+						<div class="forwho__grid">
+							<div class="grid__el grid__one">
+								<img src="./img/wallet-add.svg" alt="" />
+								<h3>Для тех, кто хочет накопить</h3>
+								<p>
+									Lorem ipsum dolor sit amet consectetur. Fusce auctor id quam
+									egestas. Lorem ipsum dolor sit amet consectetur. Fusce auctor
+									id quam egestas.
+								</p>
+							</div>
+							<div class="grid__el grid__two">
+								<img src="./img/briefcase.svg" alt="" />
+								<h3>Для начинающих инвесторов</h3>
+								<p>
+									Lorem ipsum dolor sit amet consectetur. Fusce auctor id quam
+									egestas. Lorem ipsum dolor sit amet consectetur. Fusce auctor
+									id quam egestas.
+								</p>
+							</div>
+							<div class="grid__el grid__three">
+								<img src="./img/math.svg" alt="" />
+								<h3>Для тех, кто хочет сохранить свои денежные средства</h3>
+								<p>
+									Lorem ipsum dolor sit amet consectetur. Fusce auctor id quam
+									egestas. Lorem ipsum dolor sit amet consectetur. Fusce auctor
+									id quam egestas.
+								</p>
+							</div>
+							<div class="grid__el grid__four">
+								<img src="./img/flag-green.svg" alt="" />
+								<h3>Тем, кто хочет получить уникальные условия</h3>
+								<p>
+									Lorem ipsum dolor sit amet consectetur. Fusce auctor id quam
+									egestas. Lorem ipsum dolor sit amet consectetur. Fusce auctor
+									id quam egestas.
+								</p>
+							</div>
+						</div>
 					</div>
 				</div>
 			</section>
