reworked first block

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 			<div class="wrapper">
 				<div class="logo">
 					<a href="">
-						<img src="/img/logo_small.png" alt="" />
+						<img src="/img/logo_white.svg" alt="" />
 					</a>
 				</div>
 				<nav class="head_nav">
@@ -49,7 +49,7 @@
 		<main>
 			<section id="present">
 				<div class="wrapper">
-					<img class="present_back" src="./img/back_main.png" alt="" />
+					<img class="present_back" src="./img/Human.png" alt="" />
 					<div class="present__text">
 						<h1>Мы помогаем бизнесу развиваться</h1>
 						<p>
