--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 						<li class="list__drop">
 							Услуги
 							<span class="drop_icon">
-								<img src="./img/arrow-down.svg" alt="" />
+								<img src="./img/arrow-white.svg" alt="" />
 							</span>
 							<ul class="drop__list">
 								<li><a href="">Финансирование</a></li>
