added 3-rd block

--- a/index.html
+++ b/index.html
@@ -101,49 +101,100 @@
 
 			<section id="forwho">
 				<div class="wrapper">
-					<div class="forwho__vertical">
-						<div class="forwho__head">
-							<h2>Для кого подойдёт</h2>
-							<a href="#">Зарегистрироваться</a>
+					<div class="forwho__head">
+						<h2>Для кого подойдёт</h2>
+						<a href="#">Зарегистрироваться</a>
+					</div>
+					<div class="forwho__grid">
+						<div class="fw_grid__el grid__one">
+							<img src="./img/wallet-add.svg" alt="" />
+							<h3>Для тех, кто хочет накопить</h3>
+							<p>
+								Lorem ipsum dolor sit amet consectetur. Fusce auctor id quam
+								egestas. Lorem ipsum dolor sit amet consectetur. Fusce auctor id
+								quam egestas.
+							</p>
 						</div>
-						<div class="forwho__grid">
-							<div class="grid__el grid__one">
-								<img src="./img/wallet-add.svg" alt="" />
-								<h3>Для тех, кто хочет накопить</h3>
-								<p>
-									Lorem ipsum dolor sit amet consectetur. Fusce auctor id quam
-									egestas. Lorem ipsum dolor sit amet consectetur. Fusce auctor
-									id quam egestas.
-								</p>
-							</div>
-							<div class="grid__el grid__two">
-								<img src="./img/briefcase.svg" alt="" />
-								<h3>Для начинающих инвесторов</h3>
-								<p>
-									Lorem ipsum dolor sit amet consectetur. Fusce auctor id quam
-									egestas. Lorem ipsum dolor sit amet consectetur. Fusce auctor
-									id quam egestas.
-								</p>
-							</div>
-							<div class="grid__el grid__three">
-								<img src="./img/math.svg" alt="" />
-								<h3>Для тех, кто хочет сохранить свои денежные средства</h3>
-								<p>
-									Lorem ipsum dolor sit amet consectetur. Fusce auctor id quam
-									egestas. Lorem ipsum dolor sit amet consectetur. Fusce auctor
-									id quam egestas.
-								</p>
-							</div>
-							<div class="grid__el grid__four">
-								<img src="./img/flag-green.svg" alt="" />
-								<h3>Тем, кто хочет получить уникальные условия</h3>
-								<p>
-									Lorem ipsum dolor sit amet consectetur. Fusce auctor id quam
-									egestas. Lorem ipsum dolor sit amet consectetur. Fusce auctor
-									id quam egestas.
-								</p>
-							</div>
+						<div class="fw_grid__el grid__two">
+							<img src="./img/briefcase.svg" alt="" />
+							<h3>Для начинающих инвесторов</h3>
+							<p>
+								Lorem ipsum dolor sit amet consectetur. Fusce auctor id quam
+								egestas. Lorem ipsum dolor sit amet consectetur. Fusce auctor id
+								quam egestas.
+							</p>
 						</div>
+						<div class="fw_grid__el grid__three">
+							<img src="./img/math.svg" alt="" />
+							<h3>Для тех, кто хочет сохранить свои денежные средства</h3>
+							<p>
+								Lorem ipsum dolor sit amet consectetur. Fusce auctor id quam
+								egestas. Lorem ipsum dolor sit amet consectetur. Fusce auctor id
+								quam egestas.
+							</p>
+						</div>
+						<div class="fw_grid__el grid__four">
+							<img src="./img/flag-green.svg" alt="" />
+							<h3>Тем, кто хочет получить уникальные условия</h3>
+							<p>
+								Lorem ipsum dolor sit amet consectetur. Fusce auctor id quam
+								egestas. Lorem ipsum dolor sit amet consectetur. Fusce auctor id
+								quam egestas.
+							</p>
+						</div>
+					</div>
+				</div>
+			</section>
+
+			<section id="howItWorks">
+				<div class="wrapper">
+					<h2>Как это работает</h2>
+					<div class="howItWorks__grid">
+						<div class="hiw_grid__el grid__banking">
+							<h3>Работа по принципам партнерского банкинга</h3>
+							<p>
+								Lorem ipsum dolor sit amet consectetur. Fusce auctor id quam
+								egestas. Lorem ipsum dolor sit amet consectetur.
+							</p>
+							<a href="#">Узнать больше</a>
+							<img class="banking__img" src="./img/banking_img.png" alt="" />
+						</div>
+						<div class="hiw_grid__el grid__fund">
+							<h3>Справедливая экономика Фонда</h3>
+							<p>
+								Lorem ipsum dolor sit amet consectetur. Fusce auctor id quam
+								egestas. Lorem ipsum dolor sit amet consectetur.
+							</p>
+							<img class="fund__img" src="./img/logo_small.png" alt="" />
+						</div>
+						<div class="hiw_grid__el grid__mission">
+							<h3>Наша миссия</h3>
+							<p>
+								Lorem ipsum dolor sit amet consectetur. Fusce auctor id quam
+								egestas. Lorem ipsum dolor sit amet consectetur. Fusce auctor id
+								quam egestas.
+							</p>
+							<a href="#">Узнать больше</a>
+							<img class="mission__img" src="./img/Human.png" alt="" />
+						</div>
+					</div>
+				</div>
+			</section>
+
+			<section id="selection">
+				<div class="wrapper">
+					<h2>Как проходит отбор</h2>
+					<div class="selection__grid">
+						<div class="sel_grid__el">
+							<img src="" alt="">
+							<h3></h3>
+							<a href=""></a>
+						</div>
+						<div class="sel_grid__el"></div>
+						<div class="sel_grid__el"></div>
+						<div class="sel_grid__el"></div>
+						<div class="sel_grid__el"></div>
+						<div class="sel_grid__el"></div>
 					</div>
 				</div>
 			</section>
