removed some images

--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
 						<div class="sel_grid__el">
 							<img src="" alt="">
 							<h3></h3>
-							<a href=""></a>
+							<a href="">Подробнее</a>
 						</div>
 						<div class="sel_grid__el"></div>
 						<div class="sel_grid__el"></div>
