--- a/index.html
+++ b/index.html
@@ -185,16 +185,54 @@
 				<div class="wrapper">
 					<h2>Как проходит отбор</h2>
 					<div class="selection__grid">
-						<div class="sel_grid__el">
-							<img src="" alt="">
-							<h3></h3>
+						<div class="sel_grid__el sel_one">
+							<img src="./img/messages-2.svg" alt="" />
+							<span>1</span>
+							<h3>Собеседование</h3>
 							<a href="">Подробнее</a>
 						</div>
-						<div class="sel_grid__el"></div>
-						<div class="sel_grid__el"></div>
-						<div class="sel_grid__el"></div>
-						<div class="sel_grid__el"></div>
-						<div class="sel_grid__el"></div>
+						<div class="sel_grid__el sel_two">
+							<img src="./img/filter.svg" alt="" />
+							<span>2</span>
+							<h3>Отборочная комиссия</h3>
+							<a href="">Подробнее</a>
+						</div>
+						<div class="sel_grid__el sel_three">
+							<img src="./img/Vector.svg" alt="" />
+							<span>3</span>
+							<h3>Обучение</h3>
+							<a href="">Подробнее</a>
+						</div>
+						<div class="sel_grid__el sel_four">
+							<img src="./img/briefcase.svg" alt="" />
+							<span>4</span>
+							<h3>Разработка бизнес плана</h3>
+							<a href="">Подробнее</a>
+							<div class="se__popup">
+								<p>
+									В ходе подготовки бизнес-плана заявитель будет иметь
+									возможность посоветоваться с закрепленным за ним
+									бизнес-консультантом.
+								</p>
+								<p>
+									В свою очередь, бизнес-консультанты могут давать замечания по
+									содержанию бизнес-плана и требовать уточнения и подтверждения
+									предположений, заложенных в бизнес-плане.
+								</p>
+							</div>
+						</div>
+						<div class="sel_grid__el sel_five">
+							<img src="./img/monitor.svg" alt="" />
+							<span>5</span>
+							<h3>Защита бизнес плана</h3>
+							<a href="">Подробнее</a>
+						</div>
+						<div class="sel_grid__el sel_six">
+							<img src="./img/wallet.svg" alt="" />
+							<span>6</span>
+							<h3>Перечисление заемных средств</h3>
+							<a href="">Подробнее</a>
+						</div>
 					</div>
 				</div>
 			</section>
