One more block is ready

--- a/index.html
+++ b/index.html
@@ -190,25 +190,55 @@
 							<span>1</span>
 							<h3>Собеседование</h3>
 							<a href="">Подробнее</a>
+							<div class="sel__popup">
+								<p>
+									Для рассмотрения Фондом Вашей идеи необходимо подать
+									онлайн-заявку на нашем сайте
+								</p>
+								<p>
+									После рассмотрения Онлайн-Заявки заявитель приглашается на
+									первое собеседование с бизнес-консультантом. К собеседованию
+									необходимо подготовить краткое описание бизнес-идеи, а также
+									сопровождающие документы.
+								</p>
+							</div>
 						</div>
 						<div class="sel_grid__el sel_two">
 							<img src="./img/filter.svg" alt="" />
 							<span>2</span>
 							<h3>Отборочная комиссия</h3>
 							<a href="">Подробнее</a>
+							<div class="sel__popup">
+								<p>
+									Заполненная Форма Регистрации вместе с кратким описанием
+									бизнес-идеи и сопровождающими документами рассматривается на
+									заседании Отборочной Комиссии Фонда.
+								</p>
+							</div>
 						</div>
 						<div class="sel_grid__el sel_three">
 							<img src="./img/Vector.svg" alt="" />
 							<span>3</span>
 							<h3>Обучение</h3>
 							<a href="">Подробнее</a>
+							<div class="sel__popup">
+								<p>
+									По итогам рассмотрения Вашей заявки Отборочной Комиссией Вам
+									может быть предложено пройти профильное обучение,
+									предоставляемое Фондом на бесплатной основе. В частности,
+									возможные направления обучения включают тренинг по генерации
+									идей, предназначенный для предпринимателей, чья бизнес-идея
+									ещё не до конца проработана и требует дополнительного
+									уточнения, и тренинг по разработке бизнес-плана.
+								</p>
+							</div>
 						</div>
 						<div class="sel_grid__el sel_four">
 							<img src="./img/briefcase.svg" alt="" />
 							<span>4</span>
 							<h3>Разработка бизнес плана</h3>
-							<a href="">Подробнее</a>
-							<div class="se__popup">
+							<a href="#">Подробнее</a>
+							<div class="sel__popup">
 								<p>
 									В ходе подготовки бизнес-плана заявитель будет иметь
 									возможность посоветоваться с закрепленным за ним
@@ -226,13 +256,43 @@
 							<span>5</span>
 							<h3>Защита бизнес плана</h3>
 							<a href="">Подробнее</a>
+							<div class="sel__popup">
+								<p>
+									После успешной подготовки бизнес-плана и устранения всех
+									замечаний бизнес-консультантов, заявитель будет приглашен на
+									заседание Кредитного Комитета Фонда, где ему будет
+									представлена возможность защитить свой бизнес-план и ответить
+									на вопросы экспертов. В случае окончательного одобрения
+									бизнес-плана по итогам заседания Кредитного Комитета, с
+									заявителем будет заключен договор займа.
+								</p>
+							</div>
 						</div>
 						<div class="sel_grid__el sel_six">
 							<img src="./img/wallet.svg" alt="" />
 							<span>6</span>
 							<h3>Перечисление заемных средств</h3>
 							<a href="">Подробнее</a>
+							<div class="sel__popup">
+								<p>
+									Перечисление средств в рамках договора займа производится
+									поэтапно, в соответствии со статьями расходов, согласованными
+									в рамках бизнес-плана. Перечисление происходит безналичным
+									способом.
+								</p>
+							</div>
 						</div>
+					</div>
+					<div class="sel_bottom">
+						<div class="bottom_text">
+							<h3>Начните развивать свой бизнес прямо сейчас</h3>
+							<p>
+								Lorem ipsum dolor sit amet consectetur. Fusce auctor id quam
+								egestas.
+							</p>
+							<a href="#">Зарегистрироваться</a>
+						</div>
+						<img src="./img/tel_dude.png" alt="" />
 					</div>
 				</div>
 			</section>
