--- a/index.html
+++ b/index.html
@@ -296,6 +296,74 @@
 					</div>
 				</div>
 			</section>
+
+			<section id="services">
+				<div class="wrapper">
+					<h2>Наши услуги</h2>
+					<div class="serv_grid">
+						<div class="serv_grid__el serv__fin">
+							<div class="serv__text">
+								<h3>Финансирование</h3>
+								<p>
+									Фонд предлагает предпринимателям несколько финансовых
+									продуктов, выгодно отличающихся от традиционных банков.
+								</p>
+							</div>
+							<a href="#">Узнать больше</a>
+							<img src="./img/serv_fin.png" alt="" />
+						</div>
+						<div class="serv_grid__el serv__con">
+							<div class="serv__text">
+								<h3>Консультация</h3>
+								<p>
+									Сотрудники Фонда оказывают заявителям консультационную
+									поддержку при проработке бизнес-идеи и составлении
+									бизнес-плана для реализации проекта.
+								</p>
+							</div>
+							<a href="#">Узнать больше</a>
+							<img src="./img/serv_con.png" alt="" />
+						</div>
+						<div class="serv_grid__el serv__esc">
+							<div class="serv__text">
+								<h3>Сопровождение</h3>
+								<p>
+									Фонд оказывает административную и юридическую поддержку
+									предпринимателям на протяжениии всего периода реализации
+									проекта.
+								</p>
+							</div>
+							<a href="#">Узнать больше</a>
+							<img src="./img/serv_esc.png" alt="" />
+						</div>
+						<div class="serv_grid__el serv__edu">
+							<div class="serv__text">
+								<h3>Обучение</h3>
+								<p>
+									Для предпринимателей разработаны программы тренингов по
+									проработке идей, бизнес-планированию и другим инструментам
+									ведения бизнеса.
+								</p>
+							</div>
+							<a href="#">Узнать больше</a>
+							<img src="./img/serv_edu.png" alt="" />
+						</div>
+					</div>
+				</div>
+			</section>
+
+			<section id="ourprojects">
+				<div class="wrapper">
+					<div class="ourp__header">
+						<div class="ourp_h__text">
+							<h2>Наши проекты</h2>
+							<h4>Нам доверяют более 300 клиентов</h4>
+						</div>
+						<a href="#">Смотреть все проекты</a>
+					</div>
+					
+				</div>
+			</section>
 		</main>
 	</body>
 </html>
