added project block

--- a/index.html
+++ b/index.html
@@ -361,8 +361,48 @@
 						</div>
 						<a href="#">Смотреть все проекты</a>
 					</div>
-					
+					<div class="ourp__list">
+						<div class="ourp_list_item">
+							<div class="ourp_item_text">
+								<h3>Стоматологическая клиника "Орто Про"</h3>
+								<p>
+									Lorem ipsum dolor sit amet consectetur. Fusce auctor id
+									quam.Lorem ipsum dolor sit amet consectetur. Fusce auctor id
+									quam.
+								</p>
+								<a href="#">Подробнее</a>
+							</div>
+							<img src="./img/Orto_pro.png" alt="" />
+						</div>
+						<div class="ourp_list_item">
+							<div class="ourp_item_text">
+								<h3>Детский центр ABA-терапии</h3>
+								<p>
+									Lorem ipsum dolor sit amet consectetur. Fusce auctor id
+									quam.Lorem ipsum dolor sit amet consectetur. Fusce auctor id
+									quam.
+								</p>
+								<a href="#">Подробнее</a>
+							</div>
+							<img src="./img/aba-teraphy.png" alt="" />
+						</div>
+						<div class="ourp_list_item">
+							<div class="ourp_item_text">
+								<h3>ИП Усманов Магомед</h3>
+								<p>
+									Lorem ipsum dolor sit amet consectetur. Fusce auctor id
+									quam.Lorem ipsum dolor sit amet consectetur. Fusce auctor id
+									quam.
+								</p>
+								<a href="#">Подробнее</a>
+							</div>
+							<img src="./img/IP-Usm_Mag.png" alt="" />
+						</div>
+					</div>
 				</div>
+			</section>
+			<section id="sponsors">
+				
 			</section>
 		</main>
 	</body>
