--- a/index.html
+++ b/index.html
@@ -401,9 +401,72 @@
 					</div>
 				</div>
 			</section>
+
 			<section id="sponsors">
-				
+				<div class="wrapper">
+					<div class="sps_grid">
+						<img src="./img/BFA.svg" alt="" />
+						<img src="./img/Uralmash.svg" alt="" />
+						<img src="./img/RZD.svg" alt="" />
+						<img src="./img/Rosatom.svg" alt="" />
+						<img src="./img/Pit.svg" alt="" />
+						<img src="./img/PIK.svg" alt="" />
+					</div>
+				</div>
 			</section>
 		</main>
+
+		<footer>
+			<div class="wrapper">
+				<div class="level1">
+					<img src="./img/logo.svg" alt="" />
+					<div class="level1__flex">
+						<address>+7 (8712) 29–10–10</address>
+						<p>По всем вопросам</p>
+					</div>
+				</div>
+				<div class="level2">
+					<div class="lvl2_flex">
+						<div class="lvl2_flex_item lvl2_item_1">
+							<h3>Услуги</h3>
+							<a href="#">Финансирование</a>
+							<a href="#">Консультация</a>
+							<a href="#">Обучение</a>
+							<a href="#">Сопровождение</a>
+						</div>
+						<div class="lvl2_flex_item lvl2_item_2">
+							<h3>Пользователям</h3>
+							<a href="#">Проекты</a>
+							<a href="#">О фонде</a>
+							<a href="#">Условия</a>
+							<a href="#">Отзывы</a>
+							<a href="#">Контакты</a>
+						</div>
+						<div class="lvl2_flex_item lvl2_item_3">
+							<h3>Информация</h3>
+							<a href="#">Новости</a>
+							<a href="#">FAQ</a>
+							<a href="#">Политика конфиденциальности</a>
+						</div>
+						<div class="lvl2_flex_item lvl2_item_4">
+							<h3>Контакты</h3>
+							<div class="lvl2_item4_1">
+								<span>Информационный центр</span>
+								<a href="tel:+7 (8712) 29–10–10">+7 (8712) 29–10–10</a>
+							</div>
+							<div class="lvl2_item4_2">
+								<span>По вопросам сотрудничества</span>
+								<a href="tel:+7 (938) 998–33–33">+7 (938) 998–33–33</a>
+							</div>
+							<div class="lvl2_item4_3">
+								<span>Режим работы</span>
+								<span>10:00–22:00, ПН–ПТ</span>
+							</div>
+							<div class="lvl2_item4_4"></div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</footer>
 	</body>
 </html>
