--- a/index.html
+++ b/index.html
@@ -22,17 +22,17 @@
 								<img src="./img/arrow-white.svg" alt="" />
 							</span>
 							<ul class="drop__list">
-								<li><a href="">Финансирование</a></li>
-								<li><a href="">Консультация</a></li>
-								<li><a href="">Обучение</a></li>
-								<li><a href="">Сопровождение</a></li>
+								<li><a href="#">Финансирование</a></li>
+								<li><a href="#">Консультация</a></li>
+								<li><a href="#">Обучение</a></li>
+								<li><a href="#">Сопровождение</a></li>
 							</ul>
 						</li>
-						<li><a href="">Сотрудничество</a></li>
-						<li><a href="">Условия</a></li>
-						<li><a href="">Проекты</a></li>
-						<li><a href="">О фонде</a></li>
-						<li><a href="">Контакты</a></li>
+						<li><a href="#">Новости</a></li>
+						<li><a href="#">Условия</a></li>
+						<li><a href="#">Проекты</a></li>
+						<li><a href="#">О фонде</a></li>
+						<li><a href="#">Контакты</a></li>
 					</ul>
 				</nav>
 				<a class="head_acselerator" href="">Акселератор</a>
@@ -426,45 +426,166 @@
 					</div>
 				</div>
 				<div class="level2">
-					<div class="lvl2_flex">
-						<div class="lvl2_flex_item lvl2_item_1">
-							<h3>Услуги</h3>
-							<a href="#">Финансирование</a>
-							<a href="#">Консультация</a>
-							<a href="#">Обучение</a>
-							<a href="#">Сопровождение</a>
+					<div class="lvl2__item lvl2_item_1">
+						<h3>Услуги</h3>
+						<a href="#">Финансирование</a>
+						<a href="#">Консультация</a>
+						<a href="#">Обучение</a>
+						<a href="#">Сопровождение</a>
+					</div>
+					<div class="lvl2__item lvl2_item_2">
+						<h3>Пользователям</h3>
+						<a href="#">Проекты</a>
+						<a href="#">О фонде</a>
+						<a href="#">Условия</a>
+						<a href="#">Отзывы</a>
+						<a href="#">Контакты</a>
+					</div>
+					<div class="lvl2__item lvl2_item_3">
+						<h3>Информация</h3>
+						<a href="#">Новости</a>
+						<a href="#">FAQ</a>
+						<a href="#">Политика конфиденциальности</a>
+					</div>
+					<div class="lvl2__item lvl2_item_4">
+						<h3>Контакты</h3>
+						<div class="lvl2_item4__el">
+							<span>Информационный центр</span>
+							<a href="tel:+7 (8712) 29–10–10">+7 (8712) 29–10–10</a>
 						</div>
-						<div class="lvl2_flex_item lvl2_item_2">
-							<h3>Пользователям</h3>
-							<a href="#">Проекты</a>
-							<a href="#">О фонде</a>
-							<a href="#">Условия</a>
-							<a href="#">Отзывы</a>
-							<a href="#">Контакты</a>
+						<div class="lvl2_item4__el">
+							<span>По вопросам сотрудничества</span>
+							<a href="tel:+7 (938) 998–33–33">+7 (938) 998–33–33</a>
 						</div>
-						<div class="lvl2_flex_item lvl2_item_3">
-							<h3>Информация</h3>
-							<a href="#">Новости</a>
-							<a href="#">FAQ</a>
-							<a href="#">Политика конфиденциальности</a>
+						<div class="lvl2_item4__el">
+							<span>Режим работы</span>
+							<p>10:00–22:00, ПН–ПТ</p>
 						</div>
-						<div class="lvl2_flex_item lvl2_item_4">
-							<h3>Контакты</h3>
-							<div class="lvl2_item4_1">
-								<span>Информационный центр</span>
-								<a href="tel:+7 (8712) 29–10–10">+7 (8712) 29–10–10</a>
-							</div>
-							<div class="lvl2_item4_2">
-								<span>По вопросам сотрудничества</span>
-								<a href="tel:+7 (938) 998–33–33">+7 (938) 998–33–33</a>
-							</div>
-							<div class="lvl2_item4_3">
-								<span>Режим работы</span>
-								<span>10:00–22:00, ПН–ПТ</span>
-							</div>
-							<div class="lvl2_item4_4"></div>
+						<div class="lvl2_item4__el">
+							<span>Email</span>
+							<a href="mailto:info@zayedfund.com">info@zayedfund.com</a>
 						</div>
 					</div>
+				</div>
+				<div class="level3">
+					<h2>Фонд имени Шейха Заеда</h2>
+					<div class="lvl3__text">
+						<p>
+							Основная цель Фонда - стать ключевым элементом системы содействия
+							предпринимательской деятельности для достижения устойчивого
+							социально-экономического эффекта в Чеченской Республике
+							посредством оказания целевой поддержки малому и среднему бизнесу.
+						</p>
+						<div class="lvl3__links">
+							<div class="lvl3_link_item">
+								<svg
+									width="16"
+									height="17"
+									viewBox="0 0 16 17"
+									xmlns="http://www.w3.org/2000/svg"
+								>
+									<path
+										fill-rule="evenodd"
+										clip-rule="evenodd"
+										d="M8.00002 0.130371C5.82733 0.130371 5.5549 0.13958 4.70161 0.178513C3.8501 0.217383 3.26856 0.3526 2.75966 0.550377C2.23359 0.754822 1.78745 1.02837 1.34271 1.47311C0.897966 1.91786 0.624419 2.364 0.419974 2.89007C0.222197 3.39893 0.0869798 3.98047 0.0481104 4.83198C0.0091775 5.68527 0 5.9577 0 8.13039C0 10.303 0.0091775 10.5755 0.0481104 11.4288C0.0869798 12.2803 0.222197 12.8618 0.419974 13.3707C0.624419 13.8967 0.897966 14.3429 1.34271 14.7877C1.78745 15.2324 2.23359 15.506 2.75966 15.7104C3.26856 15.9081 3.8501 16.0434 4.70161 16.0822C5.5549 16.1212 5.82733 16.1304 8.00002 16.1304C10.1727 16.1304 10.4451 16.1212 11.2984 16.0822C12.1499 16.0434 12.7314 15.9081 13.2403 15.7104C13.7664 15.506 14.2125 15.2324 14.6573 14.7877C15.102 14.3429 15.3756 13.8967 15.58 13.3707C15.7778 12.8618 15.913 12.2803 15.9519 11.4288C15.9908 10.5755 16 10.303 16 8.13039C16 5.9577 15.9908 5.68527 15.9519 4.83198C15.913 3.98047 15.7778 3.39893 15.58 2.89007C15.3756 2.364 15.102 1.91786 14.6573 1.47311C14.2125 1.02837 13.7664 0.754822 13.2403 0.550377C12.7314 0.3526 12.1499 0.217383 11.2984 0.178513C10.4451 0.13958 10.1727 0.130371 8.00002 0.130371ZM8.00002 1.57184C10.1361 1.57184 10.3891 1.57997 11.2327 1.61846C12.0127 1.65406 12.4363 1.78438 12.7182 1.89391C13.0916 2.03904 13.3581 2.21242 13.638 2.49235C13.918 2.77228 14.0913 3.03881 14.2365 3.4122C14.346 3.6941 14.4763 4.11769 14.5119 4.89768C14.5504 5.74125 14.5586 5.99429 14.5586 8.13039C14.5586 10.2665 14.5504 10.5195 14.5119 11.3631C14.4763 12.1431 14.346 12.5666 14.2365 12.8485C14.0913 13.222 13.918 13.4885 13.638 13.7684C13.3581 14.0483 13.0916 14.2217 12.7182 14.3668C12.4363 14.4764 12.0127 14.6067 11.2327 14.6423C10.3892 14.6808 10.1362 14.6889 8.00002 14.6889C5.86375 14.6889 5.61079 14.6808 4.76731 14.6423C3.98732 14.6067 3.56373 14.4764 3.28183 14.3668C2.90841 14.2217 2.64191 14.0483 2.36195 13.7684C2.08202 13.4885 1.90863 13.222 1.76354 12.8485C1.65398 12.5666 1.52366 12.1431 1.48806 11.3631C1.44957 10.5195 1.44144 10.2665 1.44144 8.13039C1.44144 5.99429 1.44957 5.74125 1.48806 4.89768C1.52366 4.11769 1.65398 3.6941 1.76354 3.4122C1.90863 3.03881 2.08202 2.77228 2.36195 2.49235C2.64191 2.21242 2.90841 2.03904 3.28183 1.89391C3.56373 1.78438 3.98732 1.65406 4.76731 1.61846C5.61088 1.57997 5.86391 1.57184 8.00002 1.57184ZM7.99972 10.7967C6.52694 10.7967 5.33304 9.60285 5.33304 8.13009C5.33304 6.65731 6.52694 5.46341 7.99972 5.46341C9.47247 5.46341 10.6664 6.65731 10.6664 8.13009C10.6664 9.60285 9.47247 10.7967 7.99972 10.7967ZM7.99972 4.02197C5.73085 4.02197 3.8916 5.86122 3.8916 8.13009C3.8916 10.3989 5.73085 12.2382 7.99972 12.2382C10.2686 12.2382 12.1078 10.3989 12.1078 8.13009C12.1078 5.86122 10.2686 4.02197 7.99972 4.02197ZM12.2683 4.81694C12.7985 4.81694 13.2283 4.38716 13.2283 3.85696C13.2283 3.32676 12.7985 2.89697 12.2683 2.89697C11.7381 2.89697 11.3083 3.32676 11.3083 3.85696C11.3083 4.38716 11.7381 4.81694 12.2683 4.81694Z"
+									/>
+								</svg>
+								<a href="#">Instagram</a>
+							</div>
+							<div class="lvl3_link_item">
+								<svg
+									width="16"
+									height="17"
+									viewBox="0 0 16 17"
+									xmlns="http://www.w3.org/2000/svg"
+								>
+									<path
+										fill-rule="evenodd"
+										clip-rule="evenodd"
+										d="M4 1.13037H12C13.6569 1.13037 15 2.47352 15 4.13037V12.1304C15 13.7872 13.6569 15.1304 12 15.1304H4C2.34315 15.1304 1 13.7872 1 12.1304V4.13037C1 2.47352 2.34315 1.13037 4 1.13037ZM12 0.130371H4C1.79086 0.130371 0 1.92123 0 4.13037V12.1304C0 14.3395 1.79086 16.1304 4 16.1304H12C14.2091 16.1304 16 14.3395 16 12.1304V4.13037C16 1.92123 14.2091 0.130371 12 0.130371ZM12.7482 5.21198C13.0982 5.21198 13.1772 5.39264 13.0982 5.64105C12.9748 6.21036 11.9505 7.72054 11.6332 8.18829C11.5729 8.27717 11.5382 8.32841 11.54 8.32841C11.4158 8.53166 11.3706 8.62199 11.54 8.84782C11.6012 8.93131 11.731 9.05871 11.8794 9.20431C12.032 9.35407 12.2043 9.52308 12.3417 9.68338C12.8385 10.248 13.2224 10.7222 13.324 11.0496C13.4144 11.3771 13.2563 11.5465 12.9175 11.5465H11.7545C11.4463 11.5465 11.2874 11.3695 10.9488 10.9922C10.8037 10.8305 10.6255 10.6319 10.3883 10.3947C9.69948 9.72855 9.39461 9.63822 9.22524 9.63822C8.98812 9.63822 8.92037 9.69468 8.92037 10.0334V11.0835C8.92037 11.3658 8.83004 11.5352 8.0848 11.5352C6.85404 11.5352 5.48777 10.7899 4.528 9.4011C3.0827 7.36864 2.6875 5.833 2.6875 5.52813C2.6875 5.35876 2.74396 5.20068 3.0827 5.20068H4.25701C4.55059 5.20068 4.6635 5.32489 4.77641 5.65234C5.35228 7.31218 6.31205 8.76878 6.70725 8.76878C6.85404 8.76878 6.92179 8.70103 6.92179 8.32841V6.61211C6.89391 6.12427 6.72409 5.91172 6.59816 5.75411C6.52006 5.65636 6.45884 5.57973 6.45884 5.47168C6.45884 5.33618 6.57175 5.20068 6.75241 5.20068H8.58162C8.83004 5.20068 8.92037 5.33618 8.92037 5.62976V7.9445C8.92037 8.19291 9.02199 8.28325 9.10103 8.28325C9.24782 8.28325 9.37203 8.19291 9.64302 7.92192C10.4786 6.98473 11.077 5.53943 11.077 5.53943C11.1561 5.37006 11.2916 5.21198 11.5851 5.21198H12.7482Z"
+									/>
+								</svg>
+								<a href="#">ВКонтакте</a>
+							</div>
+							<div class="lvl3_link_item">
+								<svg
+									width="16"
+									height="17"
+									viewBox="0 0 16 17"
+									xmlns="http://www.w3.org/2000/svg"
+								>
+									<path
+										fill-rule="evenodd"
+										clip-rule="evenodd"
+										d="M4 1.13037H12C13.6569 1.13037 15 2.47352 15 4.13037V12.1304C15 13.7872 13.6569 15.1304 12 15.1304H9.25V10.4429H11.1141L11.4688 8.13037H9.25V6.6297C9.25 5.99704 9.55992 5.38037 10.5537 5.38037H11.5625V3.41162C11.5625 3.41162 10.647 3.25537 9.77172 3.25537C7.94434 3.25537 6.75 4.36287 6.75 6.36787V8.13037H4.71875V10.4429H6.75V15.1304H4C2.34315 15.1304 1 13.7872 1 12.1304V4.13037C1 2.47352 2.34315 1.13037 4 1.13037ZM6.75 16.1304H4C1.79086 16.1304 0 14.3395 0 12.1304V4.13037C0 1.92123 1.79086 0.130371 4 0.130371H12C14.2091 0.130371 16 1.92123 16 4.13037V12.1304C16 14.3395 14.2091 16.1304 12 16.1304H9.25H8H6.75Z"
+									/>
+								</svg>
+								<a href="#">Facebook</a>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="level4">
+					<div class="lvl4__text">
+						<h3>Есть вопрос?</h3>
+						<p>
+							Свяжитесь с нами через форму обратной связи. Перезвоним вам или
+							ответим на электронной почте.
+						</p>
+						<p>
+							Или можете писать напрямую:
+							<a href="mailto:info@zayedfund.com">info@zayedfund.com</a>
+						</p>
+					</div>
+
+					<form name="sentMessage" id="contactForm" novalidate>
+						<input
+							type="text"
+							id="name"
+							placeholder="Ваше имя"
+							required
+							data-validation-required-message="Введите ваше имя."
+						/>
+						<input
+							type="tel"
+							data-format="+7 (ddd) ddd-dddd"
+							id="phone"
+							placeholder="Номер телефона"
+							required
+							data-validation-required-message="Введите ваш номер телефона."
+						/>
+						<input
+							type="email"
+							id="email"
+							placeholder="Email"
+							required
+							data-validation-required-message="Введите ваш электронный адрес."
+						/>
+						<textarea
+							id="message"
+							placeholder="Сообщение"
+							required
+							data-validation-required-message="Введите ваше сообщение"
+							maxlength="999"
+							style="resize: none"
+						></textarea>
+						<button id="btn" type="submit" class="lvl4__btn">
+							Отправить заявку
+							<svg
+								width="17"
+								height="17"
+								viewBox="0 0 17 17"
+								xmlns="http://www.w3.org/2000/svg"
+							>
+								<path
+									d="M16.5201 0.595588C16.0949 0.184079 15.4656 0.0318763 14.8789 0.192937L1.1968 3.93679C0.577744 4.09946 0.138964 4.56412 0.0207656 5.1536C-0.0999838 5.75436 0.321789 6.51779 0.872814 6.83669L5.15092 9.31058C5.58969 9.56505 6.15603 9.50143 6.51913 9.15676L11.418 4.51741C11.6646 4.27502 12.0727 4.27502 12.3193 4.51741C12.566 4.75015 12.566 5.12944 12.3193 5.37103L7.41199 10.0104C7.04804 10.3551 6.98001 10.8898 7.24787 11.3061L9.86184 15.3729C10.168 15.8553 10.6952 16.1299 11.2734 16.1299C11.3414 16.1299 11.418 16.1299 11.486 16.121C12.1493 16.0413 12.6765 15.6137 12.8721 15.0097L16.9282 2.14982C17.1068 1.60222 16.9452 1.00629 16.5201 0.595588Z"
+								/>
+							</svg>
+						</button>
+					</form>
+				</div>
+				<div class="level5">
+					<p>&copy;	2023 Фонд имени Шейха Заеда. Все права защищены.</p>
 				</div>
 			</div>
 		</footer>
