--- a/news-item.html
+++ b/news-item.html
@@ -109,21 +109,75 @@
 			</div>
 		</header>
 
-		<div class="wrapper">
-			<section class="news">
-				<h2>Новости</h2>
-				<main>
-					<div class="news_el news_big_el">
-						<img src="./img/news/news1.png" alt="" />
-						<div class="news_el_text">
-							<h3>
+		<main>
+			<div class="wrapper">
+				<section id="news_item">
+					<div class="ni_head_cont">
+						<ol class="breadcrumb">
+							<li><a href="./index.html">Главная</a></li>
+							<li><a href="./news.html">Новости</a></li>
+							<li class="ni_bc_active">
 								Фонд имени Шейха Зайеда инвестирует в системы обучения
 								сотрудников киберграмотности
-							</h3>
-							<a href="./news-item.html">Подробнее</a>
-							<time>05 мая 2023</time>
-						</div>
+							</li>
+						</ol>
+						<h2>
+							Фонд имени Шейха Зайеда инвестирует в системы обучения сотрудников
+							киберграмотности
+						</h2>
+						<time>05 мая 2023</time>
 					</div>
+					<div class="ni_text">
+						<img src="./img/news/news1.png" alt="" />
+						<p>
+							Lorem ipsum dolor sit amet consectetur. Id arcu sed neque massa
+							vitae a purus vulputate. Viverra sit pellentesque ultrices
+							ultrices amet nunc morbi aliquam non. Platea risus viverra nec
+							pretium. Sollicitudin mollis faucibus ut faucibus sed ornare.
+							Ultrices magnis fermentum ac tempor viverra elementum. Aliquet
+							mauris elementum elementum tempus semper ullamcorper integer
+							nascetur eget. Ultrices feugiat arcu et justo. Turpis mauris felis
+							faucibus aliquam quisque et ut. Viverra neque molestie auctor ut
+							consequat quam. Lorem feugiat amet egestas nunc. Pretium tempor
+							justo aliquet feugiat et. A quam scelerisque egestas etiam non a
+							eu. In ac amet ut eget sed. Duis hendrerit commodo sed nulla
+							sapien.
+						</p>
+						<p>
+							Viverra neque molestie auctor ut consequat quam. Lorem feugiat
+							amet egestas nunc. Pretium tempor justo aliquet feugiat et. A quam
+							scelerisque egestas etiam non a eu. In ac amet ut eget sed. Duis
+							hendrerit commodo sed nulla sapien. Adipiscing rhoncus aenean enim
+							sed sed nibh urna. Vulputate et vitae vitae tristique nisl eros.
+							Urna amet egestas cursus placerat ultrices eu nullam nullam.
+							Scelerisque vulputate euismod tortor ipsum pellentesque mauris.
+							Molestie id in magna magna adipiscing suspendisse velit vel sed.
+						</p>
+						<p>
+							Lorem feugiat amet egestas nunc. Pretium tempor justo aliquet
+							feugiat et. A quam scelerisque egestas etiam non a eu. In ac amet
+							ut eget sed. Duis hendrerit commodo sed nulla sapien. Adipiscing
+							rhoncus aenean enim sed sed nibh urna. Vulputate et vitae vitae
+							tristique nisl eros. Urna amet egestas cursus placerat ultrices eu
+							nullam nullam. Scelerisque vulputate euismod tortor ipsum
+							pellentesque mauris. Molestie id in magna magna adipiscing
+							suspendisse velit vel sed.
+						</p>
+						<p>
+							Viverra neque molestie auctor ut consequat quam. Lorem feugiat
+							amet egestas nunc. Pretium tempor justo aliquet feugiat et. A quam
+							scelerisque egestas etiam non a eu. In ac amet ut eget sed. Duis
+							hendrerit commodo sed nulla sapien. Adipiscing rhoncus aenean enim
+							sed sed nibh urna. Vulputate et vitae vitae tristique nisl eros.
+							Urna amet egestas cursus placerat ultrices eu nullam nullam.
+							Scelerisque vulputate euismod tortor ipsum pellentesque mauris.
+							Molestie id in magna magna adipiscing suspendisse velit vel sed.
+						</p>
+						<img src="./img/news/news1.png" alt="" />
+					</div>
+				</section>
+				<section id="same_news">
+					<h2>Похожие новости</h2>
 					<div class="news_el">
 						<img src="./img/news/news1.png" alt="" />
 						<div class="news_el_text">
@@ -157,31 +211,9 @@
 							<time>05 мая 2023</time>
 						</div>
 					</div>
-					<div class="news_el">
-						<img src="./img/news/news1.png" alt="" />
-						<div class="news_el_text">
-							<h3>
-								Фонд имени Шейха Зайеда инвестирует в системы обучения
-								сотрудников киберграмотности
-							</h3>
-							<a href="./news-item.html">Подробнее</a>
-							<time>05 мая 2023</time>
-						</div>
-					</div>
-				</main>
-
-				<aside>
-					<ul class="news_categories">
-						<li><a href="#">Все категории</a></li>
-						<li><a href="#">Бизнес</a></li>
-						<li><a href="#">Политика</a></li>
-						<li><a href="#">События</a></li>
-						<li><a href="#">Объявления</a></li>
-						<li><a href="#">Видео</a></li>
-					</ul>
-				</aside>
-			</section>
-		</div>
+				</section>
+			</div>
+		</main>
 
 		<footer>
 			<div class="wrapper">
