--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 		<style>
 			.nav_list,
 			.nav_list a,
-			.list_ru {
+			.list_ru,
+			.head_acselerator,
+			.head_requisition {
 				color: #fff !important;
 			}
 			.logo svg {
