--- a/training.html
+++ b/training.html
@@ -10,7 +10,7 @@
 		<header>
 			<div class="wrapper">
 				<div class="logo">
-					<a href="./index.html">
+					<a href="">
 						<svg
 							width="80"
 							height="47"
@@ -109,79 +109,253 @@
 			</div>
 		</header>
 
-		<div class="wrapper">
-			<section class="news">
-				<h2>Новости</h2>
-				<main>
-					<div class="news_el news_big_el">
-						<img src="./img/news/news1.png" alt="" />
-						<div class="news_el_text">
-							<h3>
-								Фонд имени Шейха Зайеда инвестирует в системы обучения
-								сотрудников киберграмотности
-							</h3>
-							<a href="./news-item.html">Подробнее</a>
-							<time>05 мая 2023</time>
+		<main>
+			<section id="edu_present">
+				<div class="wrapper">
+					<div class="present__text">
+						<h1>Образовательные программы</h1>
+						<p>
+							Бесплатное обучением для начинающих и действующих предпринимателей
+							от сертифицированных тренеров.
+						</p>
+						<a class="edu_main_link" href="#">Записаться на обучение</a>
+					</div>
+					<img class="present_back" src="./img/edu/edu_main.png" alt="" />
+					<div class="present__info">
+						<div class="info__el">
+							<div class="el_icon_cont">
+								<svg
+									width="24"
+									height="24"
+									viewBox="0 0 24 24"
+									xmlns="http://www.w3.org/2000/svg"
+								>
+									<path
+										d="M18.0199 12.33L16.7999 11.11C16.5099 10.86 16.3399 10.49 16.3299 10.08C16.3099 9.63 16.4899 9.18 16.8199 8.85L18.0199 7.65C19.0599 6.61 19.4499 5.61 19.1199 4.82C18.7999 4.04 17.8099 3.61 16.3499 3.61H5.8999V2.75C5.8999 2.34 5.5599 2 5.1499 2C4.7399 2 4.3999 2.34 4.3999 2.75V21.25C4.3999 21.66 4.7399 22 5.1499 22C5.5599 22 5.8999 21.66 5.8999 21.25V16.37H16.3499C17.7899 16.37 18.7599 15.93 19.0899 15.14C19.4199 14.35 19.0399 13.36 18.0199 12.33Z"
+										fill="#396939"
+									/>
+								</svg>
+							</div>
+							<div class="el__text">
+								<span class="el__num">3500</span>
+								<span class="el_desc">Прошли тренинги</span>
+							</div>
+						</div>
+						<div class="info__el">
+							<div class="el_icon_cont">
+								<img class="el_icon" src="./img/edu/people.svg" alt="" />
+							</div>
+							<div class="el__text">
+								<span class="el__num">20</span>
+								<span class="el_desc">бизнес тренеров</span>
+							</div>
+						</div>
+						<div class="info__el">
+							<div class="el_icon_cont">
+								<svg
+									width="24"
+									height="24"
+									viewBox="0 0 24 24"
+									xmlns="http://www.w3.org/2000/svg"
+								>
+									<path
+										d="M17 4H7C4 4 2 5.5 2 9V12.56C2 12.93 2.38 13.16 2.71 13.01C3.69 12.56 4.82 12.39 6.01 12.6C8.64 13.07 10.57 15.51 10.5 18.18C10.49 18.6 10.43 19.01 10.32 19.41C10.24 19.72 10.49 20.01 10.81 20.01H17C20 20.01 22 18.51 22 15.01V9C22 5.5 20 4 17 4ZM12 14.5C10.62 14.5 9.5 13.38 9.5 12C9.5 10.62 10.62 9.5 12 9.5C13.38 9.5 14.5 10.62 14.5 12C14.5 13.38 13.38 14.5 12 14.5ZM19.25 14C19.25 14.41 18.91 14.75 18.5 14.75C18.09 14.75 17.75 14.41 17.75 14V10C17.75 9.59 18.09 9.25 18.5 9.25C18.91 9.25 19.25 9.59 19.25 10V14Z"
+										fill="#396939"
+									/>
+									<path
+										d="M5 14C2.79 14 1 15.79 1 18C1 18.75 1.21 19.46 1.58 20.06C2.27 21.22 3.54 22 5 22C6.46 22 7.73 21.22 8.42 20.06C8.79 19.46 9 18.75 9 18C9 15.79 7.21 14 5 14ZM6.97 17.67L4.84 19.64C4.7 19.77 4.51 19.84 4.33 19.84C4.14 19.84 3.95 19.77 3.8 19.62L2.81 18.63C2.52 18.34 2.52 17.86 2.81 17.57C3.1 17.28 3.58 17.28 3.87 17.57L4.35 18.05L5.95 16.57C6.25 16.29 6.73 16.31 7.01 16.61C7.29 16.91 7.27 17.39 6.97 17.67Z"
+										fill="#396939"
+									/>
+								</svg>
+							</div>
+							<div class="el__text">
+								<span class="el__num">3</span>
+								<span class="el_desc">основных направления</span>
+							</div>
+						</div>
+						<div class="info__el">
+							<div class="el_icon_cont">
+								<img class="el_icon" src="./img/edu/cup.svg" alt="" />
+							</div>
+							<div class="el__text">
+								<span class="el__num">300</span>
+								<span class="el_desc">успешных кейсов</span>
+							</div>
 						</div>
 					</div>
-					<div class="news_el">
-						<img src="./img/news/news1.png" alt="" />
-						<div class="news_el_text">
-							<h3>
-								Фонд имени Шейха Зайеда инвестирует в системы обучения
-								сотрудников киберграмотности
-							</h3>
-							<a href="./news-item.html">Подробнее</a>
-							<time>05 мая 2023</time>
-						</div>
-					</div>
-					<div class="news_el">
-						<img src="./img/news/news1.png" alt="" />
-						<div class="news_el_text">
-							<h3>
-								Фонд имени Шейха Зайеда инвестирует в системы обучения
-								сотрудников киберграмотности
-							</h3>
-							<a href="./news-item.html">Подробнее</a>
-							<time>05 мая 2023</time>
-						</div>
-					</div>
-					<div class="news_el">
-						<img src="./img/news/news1.png" alt="" />
-						<div class="news_el_text">
-							<h3>
-								Фонд имени Шейха Зайеда инвестирует в системы обучения
-								сотрудников киберграмотности
-							</h3>
-							<a href="./news-item.html">Подробнее</a>
-							<time>05 мая 2023</time>
-						</div>
-					</div>
-					<div class="news_el">
-						<img src="./img/news/news1.png" alt="" />
-						<div class="news_el_text">
-							<h3>
-								Фонд имени Шейха Зайеда инвестирует в системы обучения
-								сотрудников киберграмотности
-							</h3>
-							<a href="./news-item.html">Подробнее</a>
-							<time>05 мая 2023</time>
-						</div>
-					</div>
-				</main>
-
-				<aside>
-					<ul class="news_categories">
-						<li><a href="#">Все категории</a></li>
-						<li><a href="#">Бизнес</a></li>
-						<li><a href="#">Политика</a></li>
-						<li><a href="#">События</a></li>
-						<li><a href="#">Объявления</a></li>
-						<li><a href="#">Видео</a></li>
-					</ul>
-				</aside>
+				</div>
+				<div class="rounder"></div>
 			</section>
-		</div>
+
+			<section id="services">
+				<div class="wrapper">
+					<h2>Для кого подойдёт</h2>
+					<div class="serv_grid">
+						<div class="serv_grid__el edu_serv">
+							<div class="serv__text">
+								<h3>Для начинающих предпринимателей</h3>
+								<p>
+									Lorem ipsum dolor sit amet consectetur. Fusce auctor id quam
+									egestas. Lorem ipsum dolor sit amet consectetur. Fusce auctor
+									id quam egestas.
+								</p>
+							</div>
+							<a href="#">Выбрать программу</a>
+							<img src="./img/edu/forwho1.png" alt="" />
+						</div>
+						<div class="serv_grid__el edu_serv">
+							<div class="serv__text">
+								<h3>Для предпринимателей с опытом</h3>
+								<p>
+									Lorem ipsum dolor sit amet consectetur. Fusce auctor id quam
+									egestas. Lorem ipsum dolor sit amet consectetur. Fusce auctor
+									id quam egestas.
+								</p>
+							</div>
+							<a href="#">Выбрать программу</a>
+							<img src="./img/edu/forwho2.png" alt="" />
+						</div>
+					</div>
+				</div>
+			</section>
+
+			<section id="edu_programs">
+				<div class="wrapper">
+					<div class="edu_prog__head">
+						<h2>Программы обучения</h2>
+						<a href="#">Выбрать программу</a>
+					</div>
+					<div class="edu_grid">
+						<div class="edu_grid__el edu_fin">
+							<h3>Основы управления финансами предприятия</h3>
+							<img src="./img/edu/edu_fin.png" alt="" />
+							<div class="edu__popup">
+								<h4>
+									Тренинг поможет <br />
+									решить практические задачи:
+								</h4>
+								<ul>
+									<li>
+										сформировать системное представление о финансовой
+										деятельности предприятия;
+									</li>
+									<li>
+										познакомить с основными понятиями и методами финансового
+										учета и анализа;
+									</li>
+									<li>проанализировать отчетность компании;</li>
+									<li>
+										сформировать все решения по управлению в единую систему.
+									</li>
+								</ul>
+							</div>
+						</div>
+						<div class="edu_grid__el edu_bus">
+							<h3>Основы управления финансами предприятия</h3>
+							<img src="./img/edu/edu_bus.png" alt="" />
+							<div class="edu__popup">
+								<h4>Основная задача тренинга:</h4>
+								<p>
+									Выработать у участников практические навыки составления
+									бизнес-плана и в частности изучить методики подготовки
+									маркетингового, производственного, организационного и
+									финансового разделов бизнес-планов.
+								</p>
+								<p>
+									По итогам тренинга участники смогут заполнить шаблон
+									бизнес-плана Фонда, входящего в пакет документов, необходимых
+									для получения финансирования
+								</p>
+							</div>
+						</div>
+						<div class="edu_grid__el edu_basics">
+							<h3>Основы управления финансами предприятия</h3>
+							<img src="./img/edu/edu_basics.png" alt="" />
+							<div class="edu__popup">
+								<h4>
+									В рамках тренинга будут<br />рассмотрены следующие вопросы:
+								</h4>
+								<ul>
+									<li>что такое бизнес-идея, и как правильно ее выбрать;</li>
+									<li>
+										источники возникновения бизнес-идеи и типичные ошибки при
+										поиске бизнес-идеи;
+									</li>
+									<li>критерии отбора бизнес-идеи;</li>
+									<li>
+										подходы к оценке бизнес-идеи, SWOT-анализ бизнес-идеи.
+									</li>
+								</ul>
+							</div>
+						</div>
+						<div class="edu_grid__el edu_target">
+							<h3>После прохождения обучения</h3>
+							<p>
+								После прохождения обучения результаты участников заносятся в
+								профайл и учитываются в дальнейшем при оценке их
+								бизнес-проектов.
+							</p>
+							<img src="./img/edu/edu_target.png" alt="" />
+						</div>
+					</div>
+				</div>
+			</section>
+
+			<section id="forwho">
+				<div class="wrapper">
+					<h2>Как проходит обучение</h2>
+					<div class="forwho__grid edu_edu">
+						<div class="fw_grid__el grid__one">
+							<img src="./img/edu/presention-chart.svg" alt="" />
+							<h3>Мини-лекции в формате живого обсуждения</h3>
+							<p>
+								Lorem ipsum dolor sit amet consectetur. Fusce auctor id quam
+								egestas. Lorem ipsum dolor sit amet consectetur. Fusce auctor id
+								quam egestas.
+							</p>
+						</div>
+						<div class="fw_grid__el grid__two">
+							<img src="./img/edu/note.svg" alt="" />
+							<h3>Индивидуальные задания</h3>
+							<p>
+								Lorem ipsum dolor sit amet consectetur. Fusce auctor id quam
+								egestas. Lorem ipsum dolor sit amet consectetur. Fusce auctor id
+								quam egestas.
+							</p>
+						</div>
+						<div class="fw_grid__el grid__three">
+							<img src="./img/edu/share.svg" alt="" />
+							<h3>Деловые игры и задания в мини-группах</h3>
+							<p>
+								Lorem ipsum dolor sit amet consectetur. Fusce auctor id quam
+								egestas. Lorem ipsum dolor sit amet consectetur. Fusce auctor id
+								quam egestas.
+							</p>
+						</div>
+						<div class="fw_grid__el grid__four">
+							<img src="./img/edu/setting-3.svg" alt="" />
+							<h3>Разбор реальных ситуаций и кейсов</h3>
+							<p>
+								Lorem ipsum dolor sit amet consectetur. Fusce auctor id quam
+								egestas. Lorem ipsum dolor sit amet consectetur. Fusce auctor id
+								quam egestas.
+							</p>
+						</div>
+					</div>
+					<div class="sel_bottom edu_sel">
+						<div class="bottom_text">
+							<h3>Начните развивать свой бизнес прямо сейчас</h3>
+							<p>
+								Lorem ipsum dolor sit amet consectetur. Fusce auctor id quam
+								egestas.
+							</p>
+							<a href="#">Записаться на обучение</a>
+						</div>
+						<img src="./img/tel_dude.png" alt="" />
+					</div>
+				</div>
+			</section>
+		</main>
 
 		<footer>
 			<div class="wrapper">
