--- a/index.html
+++ b/index.html
@@ -101,9 +101,9 @@
 								</svg>
 							</span>
 							<ul class="drop__list">
-								<li><a href="#">Финансирование</a></li>
+								<li><a href="./funding.html">Финансирование</a></li>
 								<li><a href="#">Консультация</a></li>
-								<li><a href="#">Обучение</a></li>
+								<li><a href="./training.html">Обучение</a></li>
 								<li><a href="#">Сопровождение</a></li>
 							</ul>
 						</li>
